--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-individual-form",
   "version": "0.0.1",
-  "description": "Create forms in React quickly and clean. Form library based on Contex API with a wide selection of user friendly inputs.",
+  "description": "Create forms in React quickly and clean. Form library based on Context API with a wide selection of user friendly inputs.",
   "main": "lib/index.js",
   "scripts": {
     "start": "webpack --watch",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "not-yet"
+    "url": "https://github.com/frontcraft/react-individual-form"
   },
   "keywords": [
     "react",
