--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "bem-modifiers": "^1.0.7",
     "react": "^16.8.4",
+    "react-jss": "^8.6.1",
     "react-loading": "^2.0.3",
     "react-notifications": "^1.4.3",
     "throttle-debounce": "^2.1.0",
