--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "bem-modifiers": "^1.0.7",
+    "polished": "^3.0.3",
     "react": "^16.8.4",
     "react-jss": "^8.6.1",
     "react-loading": "^2.0.3",
