--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-standalone-form",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Create React forms with a very minimalistic code, without having to write state management logic on your own.",
   "main": "lib/index.js",
   "scripts": {
@@ -45,6 +45,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.1",
     "eslint": "^5.15.1",
     "eslint-config-standard": "^12.0.0",
     "eslint-config-standard-react": "^7.0.2",
@@ -53,7 +54,9 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-standard": "^4.0.0",
+    "file-loader": "^3.0.1",
     "react-dom": "^16.8.4",
+    "style-loader": "^0.23.1",
     "webpack-cli": "^3.2.3"
   }
 }
