--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-standalone-form",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "Create React forms with a very minimalistic code, without having to write state management logic on your own.",
   "main": "lib/index.js",
   "scripts": {
@@ -13,14 +13,14 @@
     "url": "https://github.com/frontcraft/react-standalone-form"
   },
   "keywords": [
-    "react",
     "form",
     "forms",
+    "react",
+    "react-component",
     "context",
     "component",
-    "minimalistic",
-    "quick",
-    "standard"
+    "validation",
+    "formstate"
   ],
   "author": "Michal Kokocinski <michal@kokocinski.me> (http://kokocinski.me)",
   "license": "GPL-2.0",
