--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
     "react-loading": "^2.0.3",
     "react-toastify": "^5.1.0",
     "throttle-debounce": "^2.1.0",
-    "validator": "^10.11.0",
-    "webpack": "^4.29.6"
+    "validator": "^10.11.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
@@ -52,7 +51,6 @@
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
-    "css-loader": "^2.1.1",
     "eslint": "^5.15.1",
     "eslint-config-standard": "^12.0.0",
     "eslint-config-standard-react": "^7.0.2",
@@ -60,9 +58,6 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-standard": "^4.0.0",
-    "file-loader": "^3.0.1",
-    "style-loader": "^0.23.1",
-    "webpack-cli": "^3.2.3"
+    "eslint-plugin-standard": "^4.0.0"
   }
 }
