--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-standalone-form",
   "version": "1.5.2",
-  "description": "Create React forms with a very minimalistic code, without having to write state management logic on your own.",
+  "description": "Create React forms just with a pure JSX and let the react-standalone-form manage its state for you.",
   "main": "lib/index.js",
   "scripts": {
     "build": "babel ./src -d ./lib",
@@ -20,6 +20,7 @@
     "component",
     "validation",
     "formik",
+    "state",
     "formstate"
   ],
   "author": "Michal Kokocinski <michal@kokocinski.me> (http://kokocinski.me)",
