--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "react-standalone-form",
   "version": "1.5.6",
   "description": "Create React forms just with a pure JSX and let the react-standalone-form manage its state for you.",
-  "main": "lib/index.js",
+  "main": "./lib/index.js",
+  "module": "./lib/index.js",
+  "types": "./lib/index.d.ts",
   "scripts": {
-    "build": "tsc --build",
-    "clean": "tsc --build --clean",
+    "build": "rm -rf ./lib/* && tsc --build",
+    "clean": "rm -rf ./lib/* && tsc --build --clean",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
