--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
       "strictNullChecks": true,   // enable strict null checks as a best practice
       "module": "es6",            // specify module code generation
       "noImplicitAny": true,
+      "lib": ["es6", "dom", "es2016", "es2017"],
       "jsx": "react",             // use typescript to transpile jsx to js
       "target": "es5",            // specify ECMAScript target version
       "allowJs": true,            // allow a partial TypeScript and JavaScript codebase
