--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
   "devDependencies": {
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@types/react-jss": "^10.0.0",
+    "@types/throttle-debounce": "^2.1.0",
     "@types/validator": "^13.7.1",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
