--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-standalone-form",
+  "name": "react-form-component",
   "version": "1.5.6",
   "description": "Create React forms just with a pure JSX and let the react-standalone-form manage its state for you.",
   "main": "./lib/index.js",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/frontcraft/react-standalone-form"
+    "url": "https://github.com/frontcraft/react-form-component"
   },
   "keywords": [
     "form",
