Add rootDir to tsconfig.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
       "outDir": "./dist/",         // path to output directory
+      "rootDir": "./src",
       "strictNullChecks": true,   // enable strict null checks as a best practice
       "module": "es6",            // specify module code generation
       "noImplicitAny": true,
