--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,12 @@
 {
   "compilerOptions": {
       "outDir": "./dist/",         // path to output directory
-      "rootDir": "./src",
       "strictNullChecks": true,   // enable strict null checks as a best practice
-      "module": "es6",            // specify module code generation
+      "module": "commonjs",
       "noImplicitAny": true,
       "lib": ["es6", "dom", "es2016", "es2017"],
       "jsx": "react",             // use typescript to transpile jsx to js
-      "target": "es5",            // specify ECMAScript target version
+      "target": "es6",
       "allowJs": true,            // allow a partial TypeScript and JavaScript codebase
       "skipLibCheck": true,       // Skip type checking of declaration files.
       "moduleResolution": "node",
