--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
       "outDir": "./dist/",         // path to output directory
+      "rootDir": "./src",
       "strictNullChecks": true,   // enable strict null checks as a best practice
       "module": "commonjs",
       "noImplicitAny": true,
@@ -18,6 +19,5 @@
       "noImplicitThis": true,
       "suppressImplicitAnyIndexErrors": true,
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "dist"],
+  "include": ["src/**/*"],
 }
