--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "clean": "rm -rf ./lib/* && tsc --build --clean",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "start-storybook -p 6006",
-    "build-docs": "build-storybook"
+    "build-docs": "build-storybook",
+    "predeploy": "build-storybook",
+    "deploy-docs": "gh-pages -d storybook-static"
   },
+  "homepage": "https://firflant.github.io/react-form-component",
   "repository": {
     "type": "git",
     "url": "https://github.com/firflant/react-form-component"
@@ -70,6 +73,7 @@
     "eslint": "^8.8.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "typescript": "^4.5.5"
