--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "scripts": {
     "build": "rm -rf ./lib/* && tsc --build",
     "clean": "rm -rf ./lib/* && tsc --build --clean",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "start-storybook -p 6006",
     "build-docs": "build-storybook",
-    "deploy-docs": "build-storybook && gh-pages -d storybook-static"
+    "deploy-docs": "build-storybook && gh-pages -d storybook-static",
+    "lint": "eslint \"src/**/*.{ts,tsx,js}\""
   },
   "homepage": "https://firflant.github.io/react-form-component",
   "repository": {
@@ -75,5 +75,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "typescript": "^4.5.5"
-  }
+  },
+  "packageManager": "yarn@4.5.2"
 }
