--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "validator": "^13.7.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.15.0",
     "@storybook/addon-actions": "^6.4.21",
     "@storybook/addon-essentials": "^6.4.21",
     "@storybook/addon-interactions": "^6.4.21",
@@ -62,19 +63,19 @@
     "@storybook/testing-library": "^0.0.9",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
-    "@types/react-jss": "^10.0.0",
     "@types/throttle-debounce": "^2.1.0",
     "@types/validator": "^13.7.1",
-    "@typescript-eslint/eslint-plugin": "^5.11.0",
-    "@typescript-eslint/parser": "^5.11.0",
+    "@typescript-eslint/parser": "^8.15.0",
     "coord-parser": "^1.0.0",
-    "eslint": "^8.8.0",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "gh-pages": "^3.2.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "typescript": "^4.5.5"
+    "eslint": "^9.15.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "gh-pages": "^6.2.0",
+    "globals": "^15.12.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "typescript": "^4.5.5",
+    "typescript-eslint": "^8.15.0"
   },
   "packageManager": "yarn@4.5.2"
 }
