--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
       "module": "commonjs",
       "noImplicitAny": true,
       "lib": ["es6", "dom", "es2016", "es2017"],
-      "jsx": "react",             // use typescript to transpile jsx to js
+      "jsx": "react-jsx",
       "target": "es6",
       "allowJs": true,            // allow a partial TypeScript and JavaScript codebase
       "skipLibCheck": true,       // Skip type checking of declaration files.
@@ -17,7 +17,6 @@
       "noUnusedParameters": true,
       "esModuleInterop": true,
       "noImplicitThis": true,
-      "suppressImplicitAnyIndexErrors": true,
   },
   "include": ["src/**/*"],
 }
